--- a/Frontend/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/Frontend/src/app/layouts/admin-layout/admin-layout.component.html
@@ -11,7 +11,8 @@
         </div>
     </div>
     <div class="fixed-plugin">
-        <div class="dropdown show-dropdown open show">
+    <!-- COLOR CHANGER OF THE DASHBOARD -->
+    <!--   <div class="dropdown show-dropdown open show">
             <a href="#" data-toggle="dropdown" aria-expanded="true">
                 <i class="fa fa-cog fa-2x"> </i>
             </a>
@@ -73,7 +74,7 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </div>-->
 </div>
 <!-- Buy-Modal-angular -->
 <div class="modal modal-angular fade" id="buy" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
