Bold the Approved Family theaders

--- a/Frontend/src/app/MOHComponents/view-approved-families/view-approved-families.component.html
+++ b/Frontend/src/app/MOHComponents/view-approved-families/view-approved-families.component.html
@@ -26,15 +26,15 @@
                             
                                 <tbody>
                                     <tr>
-                                    <td rowspan = 3>Village ID</td><td rowspan = 3>Approved Family Category</td><td rowspan = 3>NIC No</td><td rowspan = 3>Date</td><td rowspan = 3>Name_of_wife</td><td rowspan = 3>Name Of Husband</td><td rowspan = 3>Address</td> <td rowspan = 3>DOB</td> <td rowspan = 3>Age at the time of Marriage</td> <td rowspan = 3>Job Status</td> <td rowspan = 3>Education Level</td> <td rowspan = 3>Address</td> <td rowspan = 3>Number Of Living Children</td>  <td colspan = 8 align="center">Pregnancy details </td>  <td colspan = 8 align="center">Famlily Planning Methods details </td><td rowspan=3>Safe For Rubella</td><td rowspan=3>Date of cervical mucoustest</td><td rowspan=3> Other Details</td><td rowspan="3">Number Of Young Children </td>
+                                    <td rowspan = 3><b>Village ID</b></td><td rowspan = 3><b>Approved Family Category</b></td><td rowspan = 3><b>NIC No</b></td><td rowspan = 3><b>Date</b></td><td rowspan = 3><b>Name Of Wife</b></td><td rowspan = 3><b>Name Of Husband</b></td><td rowspan = 3><b>Address</b></td> <td rowspan = 3><b>DOB</b></td> <td rowspan = 3><b>Age at the time of Marriage</b></td> <td rowspan = 3><b>Job Status</b></td> <td rowspan = 3><b>Education Level</b></td> <td rowspan = 3><b>Address</b></td> <td rowspan = 3><b>Number Of Living Children</b></td>  <td colspan = 8 align="center"><b>Pregnancy details</b> </td>  <td colspan = 8 align="center"><b>Family Planning Methods details </b></td><td rowspan=3><b>Safe For Rubella</b></td><td rowspan=3><b>Date of cervical mucoustest</b></td><td rowspan=3><b> Other Details</b></td><td rowspan="3"><b>Number Of Young Children </b></td>
                                     </tr>
 
                                     <tr>
-                                        <td colspan=4 align="center">Pregnancy</td>  <td colspan=4 align="center" >Result</td>     <td colspan=2 align="center">1</td>   <td colspan=2 align="center">2</td> <td colspan=2 align="center">3</td> <td colspan=2 align="center">4</td> 
+                                        <td colspan=4 align="center"><b>Pregnancy</b></td>  <td colspan=4 align="center" ><b>Result</b></td>     <td colspan=2 align="center"><b>1</b></td>   <td colspan=2 align="center"><b>2</b></td> <td colspan=2 align="center"><b>3</b></td> <td colspan=2 align="center"><b>4</b></td> 
                                     </tr>
                                     
                                     <tr>
-                                        <td>1</td><td>2</td><td>3</td><td>4</td><td>1</td><td>2</td><td>3</td><td>4</td> <td>Method</td><td>Date</td>  <td>Method</td><td>Date</td> <td>Method</td><td>Date</td> <td>Method</td><td>Date</td>
+                                        <td><b>1</b></td><td><b>2</b></td><td><b>3</b></td><td><b>4</b></td><td><b>1</b></td><td><b>2</b></td><td><b>3</b></td><td><b>4</b></td> <td><b>Method</b></td><td><b>Date</b></td>  <td><b>Method</b></td><td><b>Date</b></td> <td><b>Method</b></td><td><b>Date</b></td> <td><b>Method</b></td><td><b>Date</b></td>
                                     </tr>
 
                                     <tr *ngFor="let family of families">
