--- a/Frontend/src/app/MOHComponents/view-approved-families/view-approved-families.component.html
+++ b/Frontend/src/app/MOHComponents/view-approved-families/view-approved-families.component.html
@@ -1,11 +1,13 @@
            
+
 <div class="main-content">
+        <router-outlet></router-outlet>
   <div class="container-fluid">
         <div class="row">
-                <router-outlet></router-outlet>
+                
                 <div class="col-md-4"></div>
                 <div class="col-md-5"><h3>View Approved Families of the Area</h3></div>
-                <div class="col-md-3"> <a routerLink="AddApprovedFamilies" class="btn btn-danger btn-block">Add New Family</a></div>
+                <div *ngIf="checkRoute()" class="col-md-3"> <a routerLink="AddApprovedFamilies" class="btn btn-danger btn-block">Add New Family</a></div>
             </div>
             
         <div class="row">
