--- a/Frontend/src/app/components/navbar/navbar.component.html
+++ b/Frontend/src/app/components/navbar/navbar.component.html
@@ -12,10 +12,10 @@
         <div class="collapse navbar-collapse justify-content-end" id="navigation">
             
             <div *ngIf="Display()">
-                <form class="navbar-form" >
-                    {{ regform|json}}
+                <form  #userForm="ngForm" class="navbar-form">
+                    {{ userForm.value|json }}
                     <div class="input-group no-border">
-                        <input type="text" value="" class="form-control" placeholder="{{nameOftheSearch}}..." >
+                        <input type="text" value="" class="form-control" name="searchData" placeholder="{{nameOftheSearch}}... " ngModel >
                         <button mat-raised-button type="submit" class="btn btn-white btn-round btn-just-icon">
                             <i class="material-icons">search</i>
                             <div class="ripple-container"></div>
