--- a/Frontend/src/app/MOHComponents/view-babiesof-area/view-babiesof-area.component.html
+++ b/Frontend/src/app/MOHComponents/view-babiesof-area/view-babiesof-area.component.html
@@ -1,5 +1,12 @@
 <div class="main-content">
-  <div class="container-fluid">
+    <router-outlet></router-outlet>
+<div class="container-fluid">
+    <div class="row">
+            
+            <div class="col-md-4"></div>
+            <div class="col-md-5"><h3>View Babies of the Area</h3></div>
+            <div class="col-md-3"> <a routerLink="AddMotherBabyJoined" class="btn btn-danger btn-block">Add a new Baby</a></div>
+        </div>
       <div class="row">
           <div class="col-md-12">
               <div class="card">
@@ -9,8 +16,6 @@
                   </div>
                   <div class="card-body">
 
-
-          
                       <div *ngFor="let family of families">
                           <ul>
                                   {{family | json}}
