Clinics Notifications Partially Added

--- a/Frontend/src/app/notifications/notifications.component.html
+++ b/Frontend/src/app/notifications/notifications.component.html
@@ -10,6 +10,7 @@
           </div>
           <div class="card-body">
               <div class="row">
+                  {{ clinics|json }}
                   <div class="col-md-6">
                       <h4 class="card-title">Notifications Style</h4>
                       <div class="alert alert-info">
