--- a/Frontend/src/app/components/navbar/navbar.component.html
+++ b/Frontend/src/app/components/navbar/navbar.component.html
@@ -42,12 +42,16 @@
                             <span class="d-lg-none d-md-block">Some Actions</span>
                         </p>
                     </a>
-                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="javascript:void(0)">Mike John responded to your email</a>
+                    <div  class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                        
+                        <a class="dropdown-item" href="javascript:void(0)">{{clinic.clinic_title}}</a>
+                        
+                        
+                      <a class="dropdown-item" href="javascript:void(0)">Mike John responded to your email</a>
                         <a class="dropdown-item" href="javascript:void(0)">You have 5 new tasks</a>
                         <a class="dropdown-item" href="javascript:void(0)">You're now friend with Andrew</a>
                         <a class="dropdown-item" href="javascript:void(0)">Another Notification</a>
-                        <a class="dropdown-item" href="javascript:void(0)">Another One</a>
+                        <a class="dropdown-item" href="javascript:void(0)">Another One</a>  
                     </div>
                 </li>
                 <li class="nav-item">
