--- a/Frontend/src/app/MOHComponents/add-approved-families/add-approved-families.component.html
+++ b/Frontend/src/app/MOHComponents/add-approved-families/add-approved-families.component.html
@@ -1,4 +1,5 @@
-<div class="container-fluid">
+
+  <div class="container-fluid">
     <div class="row">
         <div class="col-md-12">
             <div class="card">
@@ -68,7 +69,7 @@
                                 </mat-form-field>
                             </div><div class="col-md-3">
                                 <mat-form-field class="example-full-width">
-                                  <input matInput placeholder="Age at marriage" type= "number" formControlName="Age_at_the_time_of_marriage">
+                                  <input matInput placeholder="Age at marriage" type= "number" formControlName="Age_at_the_time_of_marriage" min="0" max="45">
                                   <div *ngIf="submitted && approvedFamilyForm.controls.Age_at_the_time_of_marriage.errors" class="error">
                                       <div *ngIf="approvedFamilyForm.controls.Age_at_the_time_of_marriage.errors.required">This field is required</div>
                                     </div>
@@ -88,7 +89,7 @@
                         </div>
                         <div class="col-md-3">
                           <mat-form-field class="example-full-width">
-                            <input matInput placeholder="Number of living children" type= "number" formControlName="Number_of_living_children">
+                            <input matInput placeholder="Number of living children" type= "number" formControlName="Number_of_living_children" min="0" max="20">
                             <div *ngIf="submitted && approvedFamilyForm.controls.Number_of_living_children.errors" class="error">
                                 <div *ngIf="approvedFamilyForm.controls.Number_of_living_children.errors.required">This field is required</div>
                               </div>
@@ -100,27 +101,27 @@
                       <div class="row">
                           <div class="col-md-2">
                               <mat-form-field class="example-full-width">
-                                <input matInput placeholder="First" type= "text" formControlName="Pregnancy_details_Pregnancy_Frist">
+                                <input matInput placeholder="First" type= "text" formControlName="Pregnancy_details__Pregnancy__Frist">
                               </mat-form-field>
                           </div>
                           <div class="col-md-2">
                               <mat-form-field class="example-full-width">
-                                <input matInput placeholder="Second" type= "text" formControlName="Pregnancy_details_Pregnancy_Second">
+                                <input matInput placeholder="Second" type= "text" formControlName="Pregnancy_details__Pregnancy__Second">
                               </mat-form-field>
                           </div>
                           <div class="col-md-2">
                               <mat-form-field class="example-full-width">
-                                <input matInput placeholder="Third" type= "text" formControlName="Pregnancy_details_Pregnancy_Third">
+                                <input matInput placeholder="Third" type= "text" formControlName="Pregnancy_details__Pregnancy__Third">
                               </mat-form-field>
                           </div>
                           <div class="col-md-2">
                               <mat-form-field class="example-full-width">
-                                <input matInput placeholder="Fourth" type= "text" formControlName="Pregnancy_details_Pregnancy_Fourth">
+                                <input matInput placeholder="Fourth" type= "text" formControlName="Pregnancy_details__Pregnancy__Fourth">
                               </mat-form-field>
                           </div>
                           <div class="col-md-2">
                               <mat-form-field class="example-full-width">
-                                <input matInput placeholder="Fifth" type= "text" formControlName="Pregnancy_details_Pregnancy_Fifth">
+                                <input matInput placeholder="Fifth" type= "text" formControlName="Pregnancy_details__Pregnancy__Fifth">
                               </mat-form-field>
                           </div>
                       </div>
@@ -128,29 +129,85 @@
                       <div class="row">
                           <div class="col-md-2">
                               <mat-form-field class="example-full-width">
-                                <input matInput placeholder="First" type= "text" formControlName="Pregnancy_details_Result_First">
+                                <input matInput placeholder="First" type= "text" formControlName="Pregnancy_details__Result__First">
                               </mat-form-field>
                           </div>
                           <div class="col-md-2">
                               <mat-form-field class="example-full-width">
-                                <input matInput placeholder="Second" type= "text" formControlName="Pregnancy_details_Result_Second">
+                                <input matInput placeholder="Second" type= "text" formControlName="Pregnancy_details__Result__Second">
                               </mat-form-field>
                           </div>
                           <div class="col-md-2">
                               <mat-form-field class="example-full-width">
-                                <input matInput placeholder="Third" type= "text" formControlName="Pregnancy_details_Result_Third">
+                                <input matInput placeholder="Third" type= "text" formControlName="Pregnancy_details__Result__Third">
                               </mat-form-field>
                           </div>
                           <div class="col-md-2">
                               <mat-form-field class="example-full-width">
-                                <input matInput placeholder="Fourth" type= "text" formControlName="Pregnancy_details_Result_Fourth">
+                                <input matInput placeholder="Fourth" type= "text" formControlName="Pregnancy_details__Result__Fourth">
                               </mat-form-field>
                           </div>
                           <div class="col-md-2">
                               <mat-form-field class="example-full-width">
-                                <input matInput placeholder="Fifth" type= "text" formControlName="Pregnancy_details_Result_Fifth">
+                                <input matInput placeholder="Fifth" type= "text" formControlName="Pregnancy_details__Result__Fifth">
                               </mat-form-field>
                           </div>
+                      </div>
+                      <h5>Family planing methods</h5>
+                      <h5>Frist</h5>
+                      <div class="row">
+                        <div class="col-md-5">
+                          <mat-form-field class="example-full-width">
+                            <input matInput placeholder="Method" type= "text" formControlName="Family_planning_methods__First__Method">
+                          </mat-form-field>
+                      </div>
+                      <div class="col-md-3">
+                        <mat-form-field class="example-full-width">
+                          <input matInput placeholder="Date" type= "date" formControlName="Family_planning_methods__First__Date">
+                        </mat-form-field>
+                    </div>
+                      </div>
+
+                      <h5>Second</h5>
+                      <div class="row">
+                        <div class="col-md-5">
+                          <mat-form-field class="example-full-width">
+                            <input matInput placeholder="Method" type= "text" formControlName="Family_planning_methods__second__Method">
+                          </mat-form-field>
+                      </div>
+                      <div class="col-md-3">
+                        <mat-form-field class="example-full-width">
+                          <input matInput placeholder="Date" type= "date" formControlName="Family_planning_methods__second__Date">
+                        </mat-form-field>
+                    </div>
+                      </div>
+
+                      <h5>Third</h5>
+                      <div class="row">
+                        <div class="col-md-5">
+                          <mat-form-field class="example-full-width">
+                            <input matInput placeholder="Method" type= "text" formControlName="Family_planning_methods__third__Method">
+                          </mat-form-field>
+                      </div>
+                      <div class="col-md-3">
+                        <mat-form-field class="example-full-width">
+                          <input matInput placeholder="Date" type= "date" formControlName="Family_planning_methods__third__Date">
+                        </mat-form-field>
+                    </div>
+                      </div>
+
+                      <h5>Fourth</h5>
+                      <div class="row">
+                        <div class="col-md-5">
+                          <mat-form-field class="example-full-width">
+                            <input matInput placeholder="Method" type= "text" formControlName="Family_planning_methods__fourth__Method">
+                          </mat-form-field>
+                      </div>
+                      <div class="col-md-3">
+                        <mat-form-field class="example-full-width">
+                          <input matInput placeholder="Date" type= "date" formControlName="Family_planning_methods__fourth__Date">
+                        </mat-form-field>
+                    </div>
                       </div>
                       <div class="row">
                           <div class="col-md-2">
@@ -170,10 +227,11 @@
                           </div>
                           <div class="col-md-3">
                               <mat-form-field class="example-full-width">
-                                <input matInput placeholder="Number of young children" type= "text" formControlName="number_of_young_children">
+                                <input matInput placeholder="Number of young children" type= "number" formControlName="number_of_young_children" min="0" max="20">
                               </mat-form-field>
                           </div>
                       </div>
+                      
                       <input type="submit" value="Submit details" class="btn btn-danger pull-right">
                       
                       </form>
