--- a/Frontend/src/app/MOHComponents/view-approved-families/view-approved-families.component.html
+++ b/Frontend/src/app/MOHComponents/view-approved-families/view-approved-families.component.html
@@ -2,7 +2,7 @@
 
 <div class="main-content">
         <router-outlet></router-outlet>
-  <div class="container-fluid">
+  <div *ngIf="checkRoute()" class="container-fluid">
         <div class="row">
                 
                 <div class="col-md-4"></div>
@@ -28,7 +28,7 @@
                             
                                 <tbody>
                                     <tr>
-                                    <td rowspan = 3><b>Village ID</b></td><td rowspan = 3><b>Approved Family Category</b></td><td rowspan = 3><b>NIC No</b></td><td rowspan = 3><b>Date</b></td><td rowspan = 3><b>Name Of Wife</b></td><td rowspan = 3><b>Name Of Husband</b></td><td rowspan = 3><b>Address</b></td> <td rowspan = 3><b>DOB</b></td> <td rowspan = 3><b>Age at the time of Marriage</b></td> <td rowspan = 3><b>Job Status</b></td> <td rowspan = 3><b>Education Level</b></td> <td rowspan = 3><b>Address</b></td> <td rowspan = 3><b>Number Of Living Children</b></td>  <td colspan = 8 align="center"><b>Pregnancy details</b> </td>  <td colspan = 8 align="center"><b>Family Planning Methods details </b></td><td rowspan=3><b>Safe For Rubella</b></td><td rowspan=3><b>Date of cervical mucoustest</b></td><td rowspan=3><b> Other Details</b></td><td rowspan="3"><b>Number Of Young Children </b></td>
+                                    <td rowspan = 3><b>Village ID</b></td><td rowspan = 3><b>Approved Family Category</b></td><td rowspan = 3><b>Family ID</b></td><td rowspan = 3><b>Date</b></td><td rowspan = 3><b>Name Of Wife</b></td><td rowspan = 3><b>Name Of Husband</b></td><td rowspan = 3><b>Address</b></td> <td rowspan = 3><b>DOB</b></td> <td rowspan = 3><b>Age at the time of Marriage</b></td> <td rowspan = 3><b>Job Status</b></td> <td rowspan = 3><b>Education Level</b></td> <td rowspan = 3><b>Address</b></td> <td rowspan = 3><b>Number Of Living Children</b></td>  <td colspan = 8 align="center"><b>Pregnancy details</b> </td>  <td colspan = 8 align="center"><b>Family Planning Methods details </b></td><td rowspan=3><b>Safe For Rubella</b></td><td rowspan=3><b>Date of cervical mucoustest</b></td><td rowspan=3><b> Other Details</b></td><td rowspan="3"><b>Number Of Young Children </b></td>
                                     </tr>
 
                                     <tr>
@@ -39,7 +39,7 @@
                                         <td><b>1</b></td><td><b>2</b></td><td><b>3</b></td><td><b>4</b></td><td><b>1</b></td><td><b>2</b></td><td><b>3</b></td><td><b>4</b></td> <td><b>Method</b></td><td><b>Date</b></td>  <td><b>Method</b></td><td><b>Date</b></td> <td><b>Method</b></td><td><b>Date</b></td> <td><b>Method</b></td><td><b>Date</b></td>
                                     </tr>
 
-                                    <tr *ngFor="let family of families">
+                                    <tr *ngFor="let family of families" (click)="onClickMe(family.Identity_number)" style="cursor:pointer">
                                     <td>{{family.village_id}}</td>
                                     <td>{{family.Approved_family_category}}</td>
                                     <td>{{family.Identity_number}}</td>
@@ -79,6 +79,7 @@
                                     <td>{{family.Safeforrubella}}</td>
                                     <td>{{family.Dateofcervicalmucoustest}}</td>
                                     <td>{{family.Otherdetails}}</td>
+                                    <td></td>
                                     <td>{{family.numberofyoungchildren}}</td>
                                     
                                     </tr>
@@ -93,136 +94,7 @@
       </div>
       <div class="col-md-12">
           <div class="card card-plain">
-              <div class="card-header card-header-danger">
-                  <h4 class="card-title mt-0"> Table on Plain Background</h4>
-                  <p class="card-category"> Here is a subtitle for this table
-              </div>
-              <div class="card-body">
-                  <div class="table-responsive">
-                      <table class="table table-hover">
-                          <thead class="">
-                              <th>
-                                  ID
-                              </th>
-                              <th>
-                                  Name
-                              </th>
-                              <th>
-                                  Country
-                              </th>
-                              <th>
-                                  City
-                              </th>
-                              <th>
-                                  Salary
-                              </th>
-                          </thead>
-                          <tbody>
-                              <tr>
-                                  <td>
-                                      1
-                                  </td>
-                                  <td>
-                                      Dakota Rice
-                                  </td>
-                                  <td>
-                                      Niger
-                                  </td>
-                                  <td>
-                                      Oud-Turnhout
-                                  </td>
-                                  <td>
-                                      $36,738
-                                  </td>
-                              </tr>
-                              <tr>
-                                  <td>
-                                      2
-                                  </td>
-                                  <td>
-                                      Minerva Hooper
-                                  </td>
-                                  <td>
-                                      Curaçao
-                                  </td>
-                                  <td>
-                                      Sinaai-Waas
-                                  </td>
-                                  <td>
-                                      $23,789
-                                  </td>
-                              </tr>
-                              <tr>
-                                  <td>
-                                      3
-                                  </td>
-                                  <td>
-                                      Sage Rodriguez
-                                  </td>
-                                  <td>
-                                      Netherlands
-                                  </td>
-                                  <td>
-                                      Baileux
-                                  </td>
-                                  <td>
-                                      $56,142
-                                  </td>
-                              </tr>
-                              <tr>
-                                  <td>
-                                      4
-                                  </td>
-                                  <td>
-                                      Philip Chaney
-                                  </td>
-                                  <td>
-                                      Korea, South
-                                  </td>
-                                  <td>
-                                      Overland Park
-                                  </td>
-                                  <td>
-                                      $38,735
-                                  </td>
-                              </tr>
-                              <tr>
-                                  <td>
-                                      5
-                                  </td>
-                                  <td>
-                                      Doris Greene
-                                  </td>
-                                  <td>
-                                      Malawi
-                                  </td>
-                                  <td>
-                                      Feldkirchen in Kärnten
-                                  </td>
-                                  <td>
-                                      $63,542
-                                  </td>
-                              </tr>
-                              <tr>
-                                  <td>
-                                      6
-                                  </td>
-                                  <td>
-                                      Mason Porter
-                                  </td>
-                                  <td>
-                                      Chile
-                                  </td>
-                                  <td>
-                                      Gloucester
-                                  </td>
-                                  <td>
-                                      $78,615
-                                  </td>
-                              </tr>
-                          </tbody>
-                      </table>
-                  </div>
+            
               </div>
           </div>
       </div>
