Approved Family Fully Completed

--- a/Frontend/src/app/MOHComponents/add-clinic/add-clinic.component.html
+++ b/Frontend/src/app/MOHComponents/add-clinic/add-clinic.component.html
@@ -19,8 +19,8 @@
         </div>
     </div>-->
   <div class="card">
-      <div class="card-header card-header-danger">
-          <h4 class="card-title">Edit Profile</h4>
+      <div class="card-header card-header-info">
+          <h4 class="card-title">Enter Clinic Data</h4>
           <p class="card-category">Complete your profile</p>
       </div>
       
