--- a/Frontend/src/app/MOHComponents/view-approved-families/view-approved-families.component.html
+++ b/Frontend/src/app/MOHComponents/view-approved-families/view-approved-families.component.html
@@ -5,9 +5,9 @@
   <div *ngIf="checkRoute()" class="container-fluid">
         <div class="row">
                 
-                <div class="col-md-4"></div>
-                <div class="col-md-5"><h3>View Approved Families of the Area</h3></div>
-                <div *ngIf="checkRoute()" class="col-md-3"> <a routerLink="AddApprovedFamilies" class="btn btn-danger btn-block">Add New Family</a></div>
+                
+                <div class="col-md-9"></div>
+                <div *ngIf="checkRoute()" class="col-md-3"> <a routerLink="AddApprovedFamilies" class="btn btn-info btn-block">Add New Family</a></div>
             </div>
             
         <div class="row">
@@ -18,9 +18,9 @@
       <div class="row">
           <div class="col-md-12">
               <div class="card">
-                  <div class="card-header card-header-danger">
-                      <h4 class="card-title ">Simple Table</h4>
-                      <p class="card-category"> Here is a subtitle for this table</p>
+                  <div class="card-header card-header-info">
+                      <h4 class="card-title "><h3>View Approved Families of the Area</h3></h4>
+                      <h5 class="card-category">Click to view the individual Records</h5>
                   </div>
                   <div class="card-body">
                     <div class="table-responsive">
